- bug #1807923 [login] Login with html entities in password fails
- [core] Undefined variable when creating a table that exists
- patch #1808578 Changes in font size were no longer detected after patch
  #1787915
+ [lang] Croatian update, thanks to Renato Pavicic
- patch #1807615 [GUI] Display patch for column rights in Opera
- bug #1811519 Can't delete user with a german umlaut.

2.11.1.1 (not yet released)
- bug #1810629 [setup] XSS in setup.php, thanks to Omer Singer, The DigiTrust Group

2.11.1.0 (2007-09-20)

- bug #1783667 [export] NO_AUTO_VALUE_ON_ZERO and MySQL version 
- bug #1780098 [GUI] Logout causes CSS loss, thanks to Juergen Wind
. incorrect field ids, thanks to Michael Keck
- bug #1787522 [view] wrong choice in algorithm drop-down
- bug #1777620 [GUI] Table Print preview: missing column header,
  thanks to Mario Rohkrämer
- Do not display "Your MySQL library..." if only the Z part of X.Y.Z version
  is different
- bugs #1767759, 1216521 [data] Duplicate entry error Browse feature: this minor
  feature removed due to its complexity
- bug #1774825 [operations] Rename database loses charset info
- bug #1791568 [core] Undefined cfg, thanks to Christian Schmidt
- bug #1782332 [structure] New table form does not overtake data 
- bug #1793763 [requirements] minimum PHP should be 4.2.0 
- patch #1787915 Avoid CSS reloading on every click, thanks to Juergen Wind
- bug #1798627 [GUI] Wrong storage engine displayed

2.11.0.0 (2007-08-21)

+ [import] support handling of DELIMITER to mimic mysql CLI, thanks to fb1
+ improved PHP 6 compatibility
- bug #1674914 [structure] changing definition of a TIMESTAMP field
- bug #1615530 [upload] added more specific error message if field upload fails
- bug #1627210, #1083301, #1482401 [data] warning on duplicate indexes
- bug #1668724 JavaScript focus login Opera
- bug #1666657 [auth] Cookie password delete on timeout / inactivity
- bug #1648802 different mysql library and server version